<resources>
    <string name="app_name">PizzaApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_burgers">Burgers</string>
    <string name="prodcut_weight_system">kg</string>
    <string name="menu_pizzas">Pizzas</string>
    <string name="menu_beverages">Beverages</string>
    <string name="prodcut_weight_liters">l</string>
    <string name="menu_restaurant_name">Stenov Pizza</string>
    <string name="menu_pizza_motto">A thousand miles from ordinary</string>
    <string name="shopping_cart_remove">Remove</string>
    <string name="product_weight">Weight</string>
    <string name="product_ingredient">Ingredients</string>
    <string name="product_description">Description</string>
    <string name="product_price">Price</string>
    <string name="product_product_name">Product Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoppingcart_total_items">Total items: </string>
    <string name="shopping_cart_order">Order</string>
    <string name="menu_shopping_cart">Shopping Cart</string>
    <string name="menu_settings">Settings</string>
    <string name="home_you_can_order">You can order:</string>
    <string name="working_hours">Working time:</string>
</resources>