<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_burgers"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_burgers" />
        <item
            android:id="@+id/nav_pizzas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pizzas" />

        <item
            android:id="@+id/nav_beverages"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_beverages" />
    </group>
</menu>