<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pizzaapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_burgers"
            app:destination="@id/nav_burgers"
            />
        <action
            android:id="@+id/action_nav_home_to_nav_pizzas"
            app:destination="@id/nav_pizzas" />
        <action
            android:id="@+id/action_nav_home_to_nav_beverages"
            app:destination="@id/nav_beverages" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.pizzaapp.ui.gallery.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_burgers"
        android:name="com.example.pizzaapp.ui.burger.BurgerFragment"
        android:label="@string/menu_burgers"
        tools:layout="@layout/fragment_burger" />
    <fragment
        android:id="@+id/nav_pizzas"
        android:name="com.example.pizzaapp.ui.pizza.PizzaFragment"
        android:label="@string/menu_pizzas"
        tools:layout="@layout/fragment_pizza" />
    <fragment
        android:id="@+id/nav_beverages"
        android:name="com.example.pizzaapp.ui.beverages.BeverageFragment"
        android:label="@string/menu_beverages"
        tools:layout="@layout/fragment_beverage" />
    <fragment
        android:id="@+id/nav_shopping_cart"
        android:name="com.example.pizzaapp.ui.shoppingcart.shoppingCartFragmentMain"
        android:label="@string/menu_shopping_cart"
        tools:layout="@layout/fragment_beverage" />
</navigation>